move & rename sln file

--- a/ServiceBus.Consumer/appsettings.json
+++ b/ServiceBus.Consumer/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ServiceBus": {
     "ConnectionString": "your-azure-service-bus-connection-string",
-    "TopicName": "your-azure-topic-name",
-    "SubscriptionName": "your-azure-subs-name"
+    "TopicName": "exampletopic",
+    "SubscriptionName": "customer"
   },
   "Logging": {
     "LogLevel": {
