--- a/ServiceBus.Producer/appsettings.json
+++ b/ServiceBus.Producer/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ServiceBus": {
     "ConnectionString": "your-azure-service-bus-connection-string",
-    "TopicName": "your-azure-topic-name"
+    "TopicName": "exampletopic"
   },
   "Logging": {
     "LogLevel": {
